Fix #80 - experience button is not responsive.

--- a/sass/_proposal_detail.scss
+++ b/sass/_proposal_detail.scss
@@ -670,7 +670,7 @@
       a {
         position: relative !important;
         left: inherit !important;
-        margin: auto !important;
+        margin: 20px auto !important;
         bottom: inherit !important;
       }
     }
@@ -723,7 +723,7 @@
       a {
         position: relative !important;
         left: inherit !important;
-        margin: auto !important;
+        margin: 20px auto !important;
         bottom: inherit !important;
       }
     }
